--- a/TestWithBasicAuth/TestWithBasicAuth/Pages/Counter.razor
+++ b/TestWithBasicAuth/TestWithBasicAuth/Pages/Counter.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Token Demo</h1>
+<h1>Token Demosida</h1>
 
 <h3>Access Token: @accessToken</h3>
 <h3>Refresh Token: @refreshToken</h3>
