--- a/TestWithBasicAuth/TestWithBasicAuth/Layout/NavMenu.razor
+++ b/TestWithBasicAuth/TestWithBasicAuth/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject AuthenticationStateProvider AuthenticationStateProvider
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">TestWithBasicAuth</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -24,6 +26,22 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+
+            <NavLink class="nav-link" href="admin">
+                <span aria-hidden="true"></span> Admin
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="hidden">
+                <span aria-hidden="true"></span> Restricted page
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="auth-demo">
+                <span aria-hidden="true"></span> Authorization Demo
+            </NavLink>
+        </div>
     </nav>
 </div>
 
@@ -36,4 +54,6 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+
 }
